Update server instructions